--- a/config_merge.yml
+++ b/config_merge.yml
@@ -1,12 +1,9 @@
 ---
 - name: Napalm get facts
-  hosts: "test-sw"
+  hosts: "ios-devices"
   gather_facts: false
   connection: local 
   
   roles:
-  
-   # - role: ios/merge/commit
-    #  config_path: ./arch.txt  
-    - role: ios/replace/commit
-      config_path: ./Backup_GOMD-1311.txt
+    - role: ios/merge/commit
+      config_path: ./config.txt  
