--- a/get_facts.yml
+++ b/get_facts.yml
@@ -1,18 +1,22 @@
 ---
 - name: Napalm get facts
-  hosts: "all"
+  hosts: "ios-devices"
   gather_facts: false
   connection: local 
   
-  roles:
-    - napalm_connect
+  vars:
+    provider:
+      hostname: "{{ ansible_host }}"         
+      username: '{{ ansible_user }}'         
+      dev_os: 'ios'                          
+      password: '{{ ansible_password }}'     
     
-  tasks:                                     #Begin Tasks
-    - name: get facts from device            #Task Name
-      napalm_get_facts:                      #Call the napalm module, in this case napal_get_facts
-        provider: "{{ ios_provider }}"
-        filter: 'facts,interfaces'                      #The list of items you want to retrieve. The filter keyword is _inclusive_ of what you want
-      register: output                       #Ansible function for collecting output
+  tasks:                                     
+    - name: get facts from device            
+      napalm_get_facts:                      
+        provider: "{{ provider }}"
+        filter: 'facts,interfaces'                      
+      register: output                      
 
-    - name: print results                    #Task Name
-      debug: msg="{{ output }}"              #Display the collected output
+    - name: print results                  
+      debug: msg="{{ output }}"         
