--- a/show_cmd.yml
+++ b/show_cmd.yml
@@ -3,11 +3,16 @@
   hosts: "all"
   gather_facts: false
   connection: local
-
+  
+  vars_prompt:
+    - name: "test"
+      prompt: "Please enter you show command"
+      private: no
+      
   tasks:                                    
     - name: show run 
       ios_command:
-        commands: show run
+        commands: "{{ test }}"
       register: output
 
     - name: show output
