storm control complete

--- a/example-playbooks/config/storm_control.yml
+++ b/example-playbooks/config/storm_control.yml
@@ -1,6 +1,6 @@
 ---
 - name: Apply storm control to all access ports (not trunk)
-  hosts: "SW1"
+  hosts: "all"
   gather_facts: false
   connection: local
   
@@ -11,16 +11,14 @@
       register: interfaces_temp
     - set_fact: 
         interfaces: "{{ interfaces_temp.stdout[0] | parse_cli_textfsm('/ansible/lib/parse_cli/cisco_ios_get_access_ports.template') }}"
-
-    #- template:
-     #   src: "files/templates/storm_control.j2"
-      #  dest: "files/tmp/{{ inventory_hostname }}" 
-       # force: yes
-    - name: Pass variables to role
-      include_role:
+        
+    - include_role:
         name: generate_config
       vars:
         template_path: "files/templates/storm_control.j2"
         config_path: files/tmp
-      #vars:
-       # rolevar1: 'value from task'
+
+    - include_role:
+        name: ios/merge/commit
+      vars:
+        config_path: "files/tmp/{{ inventory_hostname }}"
