added epdb debugging to dockerfile fixed template

--- a/lib/parse_cli/cisco_ios_get_access_ports.template
+++ b/lib/parse_cli/cisco_ios_get_access_ports.template
@@ -1,4 +1,4 @@
 Value INTERFACE (\S+\/\d+)
 
 Start
-  ^$INTERFACE\s+\S*\s+\S+\s+\d+\s+\S+\s+\S+\s+\S+ -> Record
+  ^$INTERFACE\s+\S*\s+\S+\s+(\d+|routed)\s+\S+\s+\S+\s+\S+ -> Record
