--- a/example-playbooks/config/config_replace.yml
+++ b/example-playbooks/config/config_replace.yml
@@ -1,18 +1,17 @@
 ---
-- name: Merge Config
+- name: Replace Config
   hosts: all
   gather_facts: false
   connection: local 
 
   vars_prompt:
-    - name: "template"
+    - name: "template path"
       prompt: "Please enter config template path"
       private: no
-
-  roles:
-    - role: generate_config
-      template_path: "{{ template }}"
-      config_path: files/tmp
-
-    - role: ios/replace/commit
-      config_path: "files/tmp/{{ inventory_hostname }}"
+  
+  tasks:
+    - include_role: 
+        name: ios/replace
+      vars:
+        template_path: "{{ template }}"
+        #var_path: vars.xlsx
