moved ara.sqlite

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,7 @@ services:
     ports:
       - 9191:9191
     volumes:
-      - "./files/db/ara.sqlite:/db/ara.sqlite"
+      - "./db/ara.sqlite:/db/ara.sqlite"
     environment:
       ARA_DATABASE: "sqlite:////db/ara.sqlite"
 
