--- a/example-playbooks/ansible.cfg
+++ b/example-playbooks/ansible.cfg
@@ -2,7 +2,7 @@
 inventory = ./inventory
 host_key_checking = false
 timeout = 5
-library = /ansible/lib/modules/
+library = /ansible/lib/modules/:$ara_location/plugins/modules
 roles_path = /ansible/lib/roles/
 remote_user = user
 ask_pass = True
